kubernetes/openvidu-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: openvidu-server
  labels:
    openvidu-member: openvidu-server
    app: openvidu
spec:
  containers:
    - name: openvidu-server
      image: openvidu/openvidu-k8s:0.1
      ports:
        - name: openvidu
          containerPort: 5443
          protocol: TCP
      volumeMounts:
        - name: openvidu-pro-password-volume
          readOnly: true
          mountPath: /tmp/openvidu-pro-password
  volumes:
    - name: openvidu-pro-password-volume
      secret:
        secretName: openvidu-pro-password
---
apiVersion: v1
kind: Service
metadata:
  name: openvidu
  labels:
    app: openvidu
spec:
  ports:
    - port: 4443
      targetPort: 5443
      #nodePort: 4443
      protocol: TCP
      name: openvidu
    - port: 5601
      targetPort: 5601
      #nodePort: 5601
      protocol: TCP
      name: kibana
  selector:
    app: openvidu
  type: ClusterIP
---
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: openvidu-ingress-inspector
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "openvidu"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/app-root: /
    nginx.org/websocket-services: "openvidu"
spec:  
  rules:
  - host: minikube.openvidu.io
    http:
      paths:
      - path: /inspector(/|$)(.*)
        backend:
          serviceName: openvidu
          servicePort: 4443
---
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: openvidu-ingress-openvidu
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "openvidu"
    nginx.org/websocket-services: "openvidu"
spec:  
  rules:
  - host: minikube.openvidu.io
    http:
      paths:
      - path: /elasticsearch
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /cdr
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /pro
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /openvidu
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /api-login
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /login
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /recordings
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /config
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /api
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /start
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /stop
        backend:
          serviceName: openvidu
          servicePort: 4443
      - path: /info
        backend:
          serviceName: openvidu
          servicePort: 4443
---
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: openvidu-ingress-kibana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "kibana"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/app-root: /
spec:  
  rules:
  - host: minikube.openvidu.io
    http:
      paths:
      - path: /kibana(/|$)(.*)
        backend:
          serviceName: kibana
          servicePort: 5601
